// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`media-box create 1`] = `
<div class="weui-media-box weui-media-box_appmsg">
  <div class="weui-media-box__hd"><img class="weui-media-box__thumb"></div>
  <div class="weui-media-box__bd">
    <h4 class="weui-media-box__title"></h4>
    <p class="weui-media-box__desc"></p>
  </div>
</div>
`;

exports[`media-box create 2`] = `
<div class="weui-media-box weui-media-box_text">
  <h4 class="weui-media-box__title"></h4>
  <p class="weui-media-box__desc"></p>
</div>
`;
